--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- impor font   -->
+    <link rel="preconnect" href="https://stijndv.com" />
+    <link rel="stylesheet" href="https://stijndv.com/fonts/Eudoxus-Sans.css" />
+
+    <title>ChatGpt - Yogesh Bansal</title>
   </head>
   <body>
     <div id="root"></div>
